--- a/views/allProjects.ejs
+++ b/views/allProjects.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('partials/head') %>
-    <link rel="stylesheet" href="/stylesheets/allProyects.css">
+    <link rel="stylesheet" href="/stylesheets/allprojects.css">
 </head>
 <body>
     
@@ -12,7 +12,7 @@
         <div class="container">
             <h1>Proyectos</h1>
 
-            <%- include('partials/proyects') %> 
+            <%- include('partials/projects') %> 
             
         </div>
     </div>
