--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('partials/head') %>
-    <link rel="stylesheet" href="/stylesheets/edit.css">
+    <link rel="stylesheet" href="/stylesheets/editProfile.css">
 </head>
 <body>
     
@@ -10,7 +10,7 @@
     
     <div class="body">
       <div class="container">
-        <form>
+        <form method="POST" action="">
           <h1>Editar Perfil</h1>
           <div class="form-row">
             <div class="form-group col-md-6">
