--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
                 </div>
             </div>
 
-            <%- include('partials/proyects') %> 
+            <%- include('partials/projects') %> 
             
         </div>
     </div>
