--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,11 +1,11 @@
     <div class="container">
-        <div class="proyects-container">
-            <div class="row proyectos">
+        <div class="projects-container">
+            <div class="row projects">
                 <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="proyect-box">
+                    <div class="project-box">
                         <a href="">
-                            <img src="images/Amazon.jpg" alt="imagen proyecto" class="imagen-proyecto">
-                            <div class="proyect-data">
+                            <img src="/images/Amazon.jpg" alt="imagen project" class="imagen-project">
+                            <div class="project-data">
                                 <h1>Amazon</h1>
                             </div>
                         </a>
@@ -13,10 +13,10 @@
                     </div>
                 </section>
                 <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="proyect-box">
+                    <div class="project-box">
                         <a href="">
-                            <img src="images/Quilmes.jpg" alt="imagen proyecto" class="imagen-proyecto">
-                            <div class="proyect-data">
+                            <img src="/images/Quilmes.jpg" alt="imagen project" class="imagen-project">
+                            <div class="project-data">
                                 <h1>Quilmes</h1>
                             </div>
                         </a>
@@ -24,10 +24,10 @@
                     </div>
                 </section>
                 <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="proyect-box">
+                    <div class="project-box">
                         <a href="">
-                            <img src="images/McDonalds.jpg" alt="imagen proyecto" class="imagen-proyecto">
-                            <div class="proyect-data">
+                            <img src="/images/McDonalds.jpg" alt="imagen project" class="imagen-project">
+                            <div class="project-data">
                                 <h1>Mc Donald's</h1>
                             </div>
                         </a>
@@ -35,10 +35,10 @@
                     </div>
                 </section>
                 <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="proyect-box">
+                    <div class="project-box">
                         <a href="">
-                            <img src="images/CocaCola.jpg" alt="imagen proyecto" class="imagen-proyecto">
-                            <div class="proyect-data">
+                            <img src="/images/CocaCola.jpg" alt="imagen project" class="imagen-project">
+                            <div class="project-data">
                                 <h1>Coca-Cola</h1>
                             </div>
                         </a>
@@ -46,10 +46,10 @@
                     </div>
                 </section>
                 <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="proyect-box">
+                    <div class="project-box">
                         <a href="">
-                            <img src="images/Amazon.jpg" alt="imagen proyecto" class="imagen-proyecto">
-                            <div class="proyect-data">
+                            <img src="/images/Amazon.jpg" alt="imagen project" class="imagen-project">
+                            <div class="project-data">
                                 <h1>Amazon</h1>
                             </div>
                         </a>
@@ -57,10 +57,10 @@
                     </div>
                 </section>
                 <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="proyect-box">
+                    <div class="project-box">
                         <a href="">
-                            <img src="images/CocaCola.jpg" alt="imagen proyecto" class="imagen-proyecto">
-                            <div class="proyect-data">
+                            <img src="/images/CocaCola.jpg" alt="imagen project" class="imagen-project">
+                            <div class="project-data">
                                 <h1>Coca-Cola</h1>
                             </div>
                         </a>
@@ -68,10 +68,10 @@
                     </div>
                 </section>
                 <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="proyect-box">
+                    <div class="project-box">
                         <a href="">
-                            <img src="images/McDonalds.jpg" alt="imagen proyecto" class="imagen-proyecto">
-                            <div class="proyect-data">
+                            <img src="/images/McDonalds.jpg" alt="imagen project" class="imagen-project">
+                            <div class="project-data">
                                 <h1>Mc Donald's</h1>
                             </div>
                         </a>
@@ -79,10 +79,10 @@
                     </div>
                 </section>
                 <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="proyect-box">
+                    <div class="project-box">
                         <a href="">
-                            <img src="images/Quilmes.jpg" alt="imagen proyecto" class="imagen-proyecto">
-                            <div class="proyect-data">
+                            <img src="/images/Quilmes.jpg" alt="imagen project" class="imagen-project">
+                            <div class="project-data">
                                 <h1>Quilmes</h1>
                             </div>
                         </a>
@@ -90,10 +90,10 @@
                     </div>
                 </section>
                 <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="proyect-box">
+                    <div class="project-box">
                         <a href="">
-                            <img src="images/Amazon.jpg" alt="imagen proyecto" class="imagen-proyecto">
-                            <div class="proyect-data">
+                            <img src="/images/Amazon.jpg" alt="imagen project" class="imagen-project">
+                            <div class="project-data">
                                 <h1>Amazon</h1>
                             </div>
                         </a>
