--- a/views/projectDetail.ejs
+++ b/views/projectDetail.ejs
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <%- include('partials/head') %>
-    <link rel="stylesheet" href="/stylesheets/proyectDetail.css">
+    <link rel="stylesheet" href="/stylesheets/projectDetail.css">
 </head>
 <body>
     
     <%- include('partials/header') %>
 
     <div class="body">
-        <div class="proyecto">
+        <div class="project">
             <div class="image">
                 <img src="/images/CocaCola.jpg">
             </div>
