--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
             </a>
             <div class="search col-9 col-sm-5 col-md-5 col-lg-3 col-xl-5">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Buscar proyectos" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <input type="text" class="form-control" placeholder="Buscar un proyecto" aria-label="Recipient's username" aria-describedby="button-addon2">
                     <div class="input-group-append">
                         <button class="btn btn-outline-secondary" type="button" id="button-addon2">
                             <i class="fas fa-search"></i>
@@ -18,10 +18,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/proyects/add">Subir un proyecto</a>
+                        <a class="nav-link" href="/projects/add">Subir un proyecto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/proyects">Hacer un aporte</a>
+                        <a class="nav-link" href="/projects">Hacer un aporte</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/users/login">Ingresar</a>
