--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,41 +10,44 @@
     
     <div class="body">
       <div class="container">
-        <form>
+        <form method="POST" action="/users/register">
           <h1>Registrarse</h1>
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputNombre4" class="col-md-12">Nombre</label>
-              <input type="text" class="form-control" id="inputNombre4" placeholder="Nombre">
+              <input type="text" class="form-control" id="inputNombre4" name="first_name" placeholder="Nombre">
             </div>
             <div class="form-group col-md-6">
               <label for="inputApellido4" class="col-md-12">Apellido</label>
-              <input type="text" class="form-control" id="inputApellido4" placeholder="Apellido">
+              <input type="text" class="form-control" id="inputApellido4" name="last_name" placeholder="Apellido">
             </div>
           </div>
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-12 col-form-label">Correo Electrónico</label>
             <div class="col-sm-12">
-              <input type="email" class="form-control" id="inputEmail3" placeholder="Mail">
+              <input type="email" class="form-control" id="inputEmail3" name="email" placeholder="Email">
             </div>
           </div>
-          <div class="form-group row">
-            <label for="inputPassword3" class="col-sm-12 col-form-label">Contraseña</label>
-            <div class="col-sm-12">
-              <input type="password" class="form-control" id="inputPassword3" placeholder="Contraseña">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputDni4" class="col-md-12">Numero de Documento</label>
+              <input type="text" class="form-control" id="inputDni4" name="document" placeholder="Numero de documento sin puntos" maxlength="8">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputPassword4" class="col-md-12">Contraseña</label>
+              <input type="password" class="form-control" id="inputPassword4" name="password" placeholder="Contraseña" maxlength="20" minlength="6">
             </div>
           </div>
           <div class="form-group">
             <label for="inputEmail3" class="col-sm-12 col-form-label">Seleccionar imágen de perfil</label>
             <div class="custom-file">
-                <input type="file" class="custom-file-input" id="validatedCustomFile" required>
+                <input type="file" class="custom-file-input" id="validatedCustomFile" name="avatar" required>
                 <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo...</label>
             </div>
           </div>
           <div class="form-group">
             <label for="inputEmail3" class="col-sm-12 col-form-label">Tipo de usuario</label>
-            <select class="form-control form-control-sm">
-              <option selected>Elegír tipo de usuario</option>
+            <select class="form-control form-control-sm" name="type">
               <option>Donante</option>
               <option>Emprendedor</option>
             </select>
@@ -54,7 +57,7 @@
             <div class="input-group-prepend">
               <div class="input-group-text">$</div>
             </div>
-            <input type="number" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Ingresar dinero">
+            <input type="number" class="form-control" id="inlineFormInputGroupUsername2" name="amount" placeholder="Ingresar dinero">
           </div>
           <div class="form-group row">
             <div class="col-sm-12">
