--- a/views/addProject.ejs
+++ b/views/addProject.ejs
@@ -10,7 +10,7 @@
     
     <div class="body">
         <div class="container">
-            <form method="GET" action="">
+            <form method="POST" action="/projects/add">
                 <h1>Subir un Proyecto</h1>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Título</label>
@@ -18,23 +18,23 @@
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Tipo de proyecto</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" name="typeOfProject" placeholder="Tipo de proyecto">
+                    <input type="text" class="form-control" id="formGroupExampleInput2" name="short_description" placeholder="Tipo de proyecto">
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Descripción</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" name="description" placeholder="Descripción">
+                    <input type="text" class="form-control" id="formGroupExampleInput2" name="long_description" placeholder="Descripción">
                 </div>
                 <div class="input-group mb-2 mr-sm-2">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Cantidad de dinero a recaudar</label>
                     <div class="input-group-prepend">
                       <div class="input-group-text">$</div>
                     </div>
-                    <input type="number" class="form-control" id="inlineFormInputGroupUsername2" name="projectAmount" placeholder="Dinero a recaudar">
+                    <input type="number" class="form-control" id="inlineFormInputGroupUsername2" width="511px" alt="273px" name="amount" placeholder="Dinero a recaudar">
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Seleccionar archivo</label>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="image" id="validatedCustomFile" required>
+                        <input type="file" class="custom-file-input" name="avatar" id="validatedCustomFile" required>
                         <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo...</label>
                     </div>
                 </div>
