--- a/views/editProject.ejs
+++ b/views/editProject.ejs
@@ -18,11 +18,11 @@
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Tipo de Proyecto</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" name="typeOfProject" placeholder="Tipo de project">
+                    <input type="text" class="form-control" id="formGroupExampleInput2" name="short_description" placeholder="Tipo de project">
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Descripción</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" name="description" placeholder="Descripción">
+                    <input type="text" class="form-control" id="formGroupExampleInput2" name="long_description" placeholder="Descripción">
                 </div>
                 <div class="input-group mb-2 mr-sm-2">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Cantidad de dinero a recaudar</label>
