--- a/views/addProject.ejs
+++ b/views/addProject.ejs
@@ -14,11 +14,11 @@
                 <h1>Subir un Proyecto</h1>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Título</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" name="title" placeholder="Título">
+                    <input type="text" class="form-control" id="formGroupExampleInput" name="title" placeholder="Título" required>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Tipo de proyecto</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" name="short_description" placeholder="Tipo de proyecto">
+                    <input type="text" class="form-control" id="formGroupExampleInput2" name="short_description" placeholder="Tipo de proyecto" required>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Descripción</label>
@@ -29,7 +29,7 @@
                     <div class="input-group-prepend">
                       <div class="input-group-text">$</div>
                     </div>
-                    <input type="number" class="form-control" id="inlineFormInputGroupUsername2" width="511px" alt="273px" name="amount" placeholder="Dinero a recaudar">
+                    <input type="number" class="form-control" id="inlineFormInputGroupUsername2" width="511px" alt="273px" name="amount" placeholder="Dinero a recaudar" required>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Seleccionar archivo</label>
