--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,7 +31,7 @@
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputDni4" class="col-md-12">Numero de Documento</label>
-              <input type="text" class="form-control" id="inputDni4" name="document" placeholder="Numero de documento sin puntos" maxlength="8" required>
+              <input type="number" class="form-control" id="inputDni4" name="document" placeholder="Documento" maxlength="8" required>
             </div>
             <div class="form-group col-md-6">
               <label for="inputPassword4" class="col-md-12">Contraseña</label>
