--- a/views/editProject.ejs
+++ b/views/editProject.ejs
@@ -10,33 +10,26 @@
     
     <div class="body">
         <div class="container">
-            <form method="POST" action="">
+            <form method="POST" action="/projects/edit/<%= proyecto.id %>">
                 <h1>Editar un Proyecto</h1>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Título</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" name="title" placeholder="Título">
+                    <input type="text" class="form-control" id="formGroupExampleInput" name="title" value="<%= proyecto.title %>">
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Tipo de Proyecto</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" name="short_description" placeholder="Tipo de project">
+                    <input type="text" class="form-control" id="formGroupExampleInput2" name="short_description" value="<%= proyecto.short_description %>">
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Descripción</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" name="long_description" placeholder="Descripción">
+                    <input type="text" class="form-control" id="formGroupExampleInput2" name="long_description" value="<%= proyecto.long_description %>">
                 </div>
                 <div class="input-group mb-2 mr-sm-2">
                     <label for="inputEmail3" class="col-sm-12 col-form-label">Cantidad de dinero a recaudar</label>
                     <div class="input-group-prepend">
                       <div class="input-group-text">$</div>
                     </div>
-                    <input type="number" class="form-control" id="inlineFormInputGroupUsername2" name="projectAmount" placeholder="Dinero a recaudar">
-                </div>
-                <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-12 col-form-label">Seleccionar archivo</label>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="image" id="validatedCustomFile" required>
-                        <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo...</label>
-                    </div>
+                    <input type="number" class="form-control" id="inlineFormInputGroupUsername2" name="amount" value="<%= proyecto.amount %>">
                 </div>
                 <button type="submit" class="btn btn-primary">Editar</button>
             </form>
