--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,111 +1,15 @@
-<html>
-    <div class="container">
-        <div class="projects-container">
-            <div class="row projects">
-                <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="project-box">
-                        <a href="">
-                            <img src="/images/Quilmes.jpg" alt="imagen project" class="imagen-project">
-                            <div class="project-data">
-                                <h1>Quilmes</h1>
-                            </div>
-                        </a>
-                        <h5>Cervecería.</h5>
+<div class="row projects">
+    <% for (let i = 0; i < proyectos.length; i++) { %>
+        <section class="col-sm-12 col-md-6 col-lg-4">
+            <div class="project-box">
+                <a href="projects/<%= proyectos[i].id %>">
+                    <div class="project-data">
+                        <h1><%= proyectos[i].title %></h1>
                     </div>
-                </section>
-                <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="project-box">
-                        <a href="">
-                            <img src="/images/McDonalds.jpg" alt="imagen project" class="imagen-project">
-                            <div class="project-data">
-                                <h1>Mc Donald's</h1>
-                            </div>
-                        </a>
-                        <h5>Restaurantes de servicio rápido.</h5>
-                    </div>
-                </section>
-                <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="project-box">
-                        <a href="">
-                            <img src="/images/CocaCola.jpg" alt="imagen project" class="imagen-project">
-                            <div class="project-data">
-                                <h1>Coca-Cola</h1>
-                            </div>
-                        </a>
-                        <h5>Compañia de bebidas.</h5>
-                    </div>
-                </section>
-                <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="project-box">
-                        <a href="">
-                            <img src="/images/Amazon.jpg" alt="imagen project" class="imagen-project">
-                            <div class="project-data">
-                                <h1>Amazon</h1>
-                            </div>
-                        </a>
-                        <h5>Tienda en Internet.</h5>
-                    </div>
-                </section>
-                <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="project-box">
-                        <a href="">
-                            <img src="/images/CocaCola.jpg" alt="imagen project" class="imagen-project">
-                            <div class="project-data">
-                                <h1>Coca-Cola</h1>
-                            </div>
-                        </a>
-                        <h5>Compañia de bebidas.</h5>
-                    </div>
-                </section>
-                <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="project-box">
-                        <a href="">
-                            <img src="/images/McDonalds.jpg" alt="imagen project" class="imagen-project">
-                            <div class="project-data">
-                                <h1>Mc Donald's</h1>
-                            </div>
-                        </a>
-                        <h5>Restaurantes de servicio rápido.</h5>
-                    </div>
-                </section>
-                <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="project-box">
-                        <a href="">
-                            <img src="/images/Quilmes.jpg" alt="imagen project" class="imagen-project">
-                            <div class="project-data">
-                                <h1>Quilmes</h1>
-                            </div>
-                        </a>
-                        <h5>Cervecería</h5>
-                    </div>
-                </section>
-                <section class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="project-box">
-                        <a href="">
-                            <img src="/images/Amazon.jpg" alt="imagen project" class="imagen-project">
-                            <div class="project-data">
-                                <h1>Amazon</h1>
-                            </div>
-                        </a>
-                        <h5>Tienda en Internet.</h5>
-                    </div>
-                </section>
-                <% for (let i = 0; i < proyectos.length; i++) { %>
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="project-box">
-                            <a href="">
-                                <img src="" alt="imagen project" class="imagen-project">
-                                <div class="project-data">
-                                    <h1><%= proyectos[i].title %></h1>
-                                </div>
-                            </a>
-                            <h5><%= proyectos[i].short_description %></h5>
-                        </div>
-                    </section>
-                <% } %>
+                </a>
+                <h5><%= proyectos[i].short_description %></h5>
+                <p><%= proyectos[i].long_description %></p>
             </div>
-        </div>
-    </div>
-</body>
-
-</html>
+        </section>
+    <% } %>
+</div>
