--- a/views/projectDetail.ejs
+++ b/views/projectDetail.ejs
@@ -10,23 +10,20 @@
 
     <div class="body">
         <div class="project">
-            <div class="image">
-                <img src="/images/CocaCola.jpg">
-            </div>
             <div class="description">
-                <h1>Coca-Cola</h1>
-                <h4>Tienda de Bebidas</h4>
-                <h5>Somos un grupo de amigos, los cuales queremos empezar un nuevo emprendimiento. Queremos fundar una empresa de venta de bebidas sin alcohol.</h5>
-                <p>Dinero a recaudar: $500.000</p>
+                <h1><%= proyecto.title %></h1>
+                <h4><%= proyecto.short_description %></h4>
+                <h5><%= proyecto.long_description %></h5>
+                <p>$<%= proyecto.amount %></p>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                    Progreso
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                        amount
                     </div>
                 </div>
                 <div class="buttons">
-                    <button type="button" class="edit btn btn-secondary btn-lg btn-block">Editar</button>
+                    <a href="/projects/edit/<%= proyecto.id %>"><button type="button" class="edit btn btn-secondary btn-lg btn-block">Editar</button></a>
                     <div class="space"></div>
-                    <button type="button" class="contribute btn btn-primary btn-lg btn-block">Quiero Aportar</button>
+                    <a href=""><button type="button" class="contribute btn btn-primary btn-lg btn-block">Quiero Aportar</button></a>
                 </div>
             </div>
         </div>
