--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,10 +35,12 @@
                   </ul>
                 </p>
               <% } %>
+              <label class="recordarme-label">Recordarme</label>
+              <input type="checkbox" name="recordarme" class="recordarme">
               <div class="form-group row">
                 <div class="col-sm-12">
                   <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-                  ¿No tienes una cuenta? <a href="/users/register">Resgistrarse</a>
+                  ¿No tienes una cuenta? <a href="/users/register">Registrarse</a>
                 </div>
               </div>
             </form>
