--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -10,34 +10,34 @@
     
     <div class="body">
       <div class="container">
-        <form method="POST" action="">
+        <form method="POST" action="/users/edit">
           <h1>Editar Perfil</h1>
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputNombre4" class="col-md-12">Nombre</label>
-              <input type="text" class="form-control" id="inputNombre4" placeholder="Nombre">
+              <input type="text" class="form-control" id="inputNombre4" name="first_name" placeholder="Nombre">
             </div>
             <div class="form-group col-md-6">
               <label for="inputApellido4" class="col-md-12">Apellido</label>
-              <input type="text" class="form-control" id="inputApellido4" placeholder="Apellido">
+              <input type="text" class="form-control" id="inputApellido4" name="last_name" placeholder="Apellido">
             </div>
           </div>
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-12 col-form-label">Correo Electrónico</label>
             <div class="col-sm-12">
-              <input type="email" class="form-control" id="inputEmail3" placeholder="Mail">
+              <input type="email" class="form-control" id="inputEmail3" name="email" placeholder="Mail">
             </div>
           </div>
           <div class="form-group row">
             <label for="inputPassword3" class="col-sm-12 col-form-label">Contraseña</label>
             <div class="col-sm-12">
-              <input type="password" class="form-control" id="inputPassword3" placeholder="Contraseña">
+              <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Contraseña">
             </div>
           </div>
           <div class="form-group">
             <label for="inputEmail3" class="col-sm-12 col-form-label">Imágen de perfil</label>
             <div class="custom-file">
-                <input type="file" class="custom-file-input" id="validatedCustomFile" required>
+                <input type="file" class="custom-file-input" id="validatedCustomFile" name="avatar">
                 <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo...</label>
             </div>
           </div>
@@ -46,7 +46,7 @@
             <div class="input-group-prepend">
               <div class="input-group-text">$</div>
             </div>
-            <input type="number" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Agregar dinero">
+            <input type="number" class="form-control" id="inlineFormInputGroupUsername2" name="amount" placeholder="Agregar dinero">
           </div>
           <div class="form-group row">
             <div class="col-sm-12">
