--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,8 +35,21 @@
                 </div>
             </div>
 
-            <%- include('partials/projects') %> 
-            
+            <div class="row projects">
+                <% for (let i = 0; i < proyectos.length; i++) { %>
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="project-box">
+                            <a href="projects/<%= proyectos[i].id %>">
+                                <div class="project-data">
+                                    <h1><%= proyectos[i].title %></h1>
+                                </div>
+                            </a>
+                            <h5><%= proyectos[i].short_description %></h5>
+                            <p><%= proyectos[i].long_description %></p>
+                        </div>
+                    </section>
+                <% } %>
+            </div>
         </div>
     </div>
     
