--- a/views/myProjects.ejs
+++ b/views/myProjects.ejs
@@ -10,7 +10,7 @@
 
     <div class="body">
         <div class="container col-12">
-            <h3 class="titulo-vigente col-12">project Vigente</h3>
+            <h3 class="titulo-vigente col-12">Proyecto Vigente</h3>
             <div class="vigente col-12">
                 <div class="image col-2">
                     <img src="/images/McDonalds.jpg">
@@ -23,19 +23,19 @@
                     <p>Compañia de bebidas</p>
                 </div>
             </div>
-            <h3 class="titulo-antiguos col-12">projects Antiguos</h3>
-                <div class="vigente col-12">
-                    <div class="image col-2">
-                        <img src="/images/McDonalds.jpg">
-                    </div>
-                    <div class="description col-10">
-                        <h4 class="col-11">Coca-Cola</h4>
-                        <a href="/projects/detail" class="edit col-1">
-                            <i class="fas fa-pen"></i>
-                        </a>
-                        <p>Compañia de bebidas</p>
-                    </div>
+            <h3 class="titulo-antiguos col-12">Proyectos Antiguos</h3>
+            <div class="vigente col-12">
+                <div class="image col-2">
+                    <img src="/images/McDonalds.jpg">
                 </div>
+                <div class="description col-10">
+                    <h4 class="col-11">Coca-Cola</h4>
+                    <a href="/projects/detail" class="edit col-1">
+                        <i class="fas fa-pen"></i>
+                    </a>
+                    <p>Compañia de bebidas</p>
+                </div>
+            </div>
         </div>
     </div>
 
