--- a/views/register.ejs
+++ b/views/register.ejs
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="inputEmail3" class="col-sm-12 col-form-label">Seleccionar imágen de perfil</label>
+            <label for="inputEmail3" class="col-sm-12 col-form-label">Imágen de perfil</label>
             <div class="custom-file">
                 <input type="file" class="custom-file-input" id="validatedCustomFile" name="avatar" required>
                 <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo...</label>
